# SlyEngine

./: CMakeLists.txt  README.md
SlyEngineCore/: CMakeLists.txt
SlyEngineCore/includes/SlyEngineCore/: test.h
SlyEngineCore/src/SlyEngineCore/: test.cpp
SlyEngineEditor/: CMakeLists.txt
SlyEngineEditor/src/: main.cpp
